--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,39 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+
+    services:
+        postgres:
+          image: postgres:12
+          env:
+            POSTGRES_USER: root
+            POSTGRES_PASSWORD: secret
+            POSTGRES_DB: simple_bank
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+
+
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go 1.21.x
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21.x'
+            go-version: '1.21.4'
+
+    - name: Install golang-migrate
+      run: |
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate.linux-amd64 /usr/bin/migrate
+       which migrate
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
