--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,18 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v3
-
     - name: Set up Go 1.21.x
       uses: actions/setup-go@v4
       with:
-            go-version: '1.21.4'
+        go-version: '1.21.4'
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3
 
     - name: Install golang-migrate
       run: |
        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
-       sudo mv migrate.linux-amd64 /usr/bin/migrate
+       sudo mv migrate /usr/bin/
        which migrate
 
     - name: Run migrations
