--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: ci-test
+name: Run unit tests
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
 
     services:
         postgres:
-          image: postgres:12
+          image: postgres:14-alpine
           env:
             POSTGRES_USER: root
             POSTGRES_PASSWORD: secret
@@ -32,6 +32,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.4'
+      id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
