--- a/app.env
+++ b/app.env
@@ -1,5 +1,7 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
+MIGRATION_URL=file://db/migration
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
