--- a/app.env
+++ b/app.env
@@ -8,6 +8,6 @@ TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
 REDIS_ADDRESS=0.0.0.0:6379
-EMAIL_SENDER_NAME=Simple Bank
-EMAIL_SENDER_ADDRESS=simplebanktest@gmail.com
-EMAIL_SENDER_PASSWORD=jekfcygyenvzekke
+EMAIL_SENDER_NAME=${{ secrets.EMAIL_SENDER_ADDRESS }}
+EMAIL_SENDER_ADDRESS=${{ secrets.EMAIL_SENDER_NAME }}
+EMAIL_SENDER_PASSWORD=${{ secrets.EMAIL_SENDER_PASSWORD }}
