added email config

--- a/app.env
+++ b/app.env
@@ -10,4 +10,4 @@ REFRESH_TOKEN_DURATION=24h
 REDIS_ADDRESS=0.0.0.0:6379
 EMAIL_SENDER_NAME=Bruce
 EMAIL_SENDER_ADDRESS=bmigeri@gmail.com
-EMAIL_SENDER_PASSWORD=EDMCreative2.
+EMAIL_SENDER_PASSWORD=ffqgseffvndaovxa
