--- a/app.env
+++ b/app.env
@@ -1,5 +1,4 @@
 ENVIRONMENT=development
-DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 MIGRATION_URL=file://db/migration
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
@@ -8,6 +7,6 @@ TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
 REDIS_ADDRESS=0.0.0.0:6379
-EMAIL_SENDER_NAME=Bruce
-EMAIL_SENDER_ADDRESS=bmigeri@gmail.com
-EMAIL_SENDER_PASSWORD=ffqgseffvndaovxa
+EMAIL_SENDER_NAME=Simple Bank
+EMAIL_SENDER_ADDRESS=devtestbtm@gmail.com
+EMAIL_SENDER_PASSWORD=ndglxnepfmsvsmdk
